--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,200,100,300italic" rel="stylesheet" type="text/css"> </head>
 
 <body>
-    <!-- Navigation -->
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <!------------------------------------------------------------------------------------------------------
+    *** JUMBOTRON ***
+-------------------------------------------------------------------------------------------------------->
     <div class="jumbotron">
         <div class="container">
             <nav>
@@ -47,100 +48,13 @@
                 <h3 class="job">JUNIOR <br> <span>FULL-STACK </span> <br> DEVELOPER</h3> </div>
         </div>
     </div>
-    <section class="js--section-features" id="projects">
-        <div class="container">
-            <!-- Example row of columns -->
-            <div class="row">
-                <h2 class="text-center">PROJECTS</h2>
-                <hr class="mainhr"> </div>
-            <div class="row">
-                <div class="col-md-5 col-md-offset-1 ">
-                    <div class="befolio-icon-text clearfix icon-top text-center vertical default-modern">
-                        <div class="icon"> <i class="fa fa-line-chart"></i> </div>
-                        <div class="befolio-icon-content">
-                            <div class="title-1">
-                                <h4>Research</h4> </div>
-                            <div class="content"> Here at Onfire Media we are small business specialists and build affordable websites for your online needs. We assess, analyse and implement solutions to define your website to set it apart from everyone else. </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-md-offset-2 post"> <img src="assets/images/iPhone6mock.png" title="iphone" class="om-mob" alt="iphone6"> </div>
-            </div>
-            <!--row-->
-            <div class="row">
-                <hr class="mainhr middlehr">
-                <div class="col-md-6 col-md-offset-1 post4"> <img src="assets/images/ipad.png" title="ipad" class="om-mob1" alt="ipad mock"> </div>
-                <div class="col-md-5">
-                    <div class="befolio-icon-text clearfix icon-top text-center vertical default-modern">
-                        <div class="icon"> <i class="fa fa-code"></i> </div>
-                        <div class="befolio-icon-content">
-                            <div class="title-2">
-                                <h4>Development</h4> </div>
-                            <div class="content"> We Carefully plan and structure the visual hierarchy, content, images and overall layout using wireframes and live demos, translating the design to code with our mobile first approach ensuring the website we create is optimised for user experience. </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--row-->
-            <div class="row">
-                <hr class="mainhr middlehr">
-                <div class="col-md-5 col-md-offset-1">
-                    <div class="befolio-icon-text clearfix icon-top text-center vertical default-modern">
-                        <div class="icon"> <i class="fa fa-lightbulb-o"></i> </div>
-                        <div class="befolio-icon-content">
-                            <div class="title-3">
-                                <h4>Techniques</h4> </div>
-                            <div class="content"> We use intelliegent meta tag techniques that are search engine friendly, and add analytics to track user enganagement and study the data to suggest strategic improvements which help to constantly improve your website. </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5 col-md-offset-1 post"> <img src="assets/images/iphone6iso.png" title="iso" class="om-mob2" alt="iso iphone"> </div>
-            </div>
-            <div class="row">
-                <hr class="mainhr middlehr">
-                <div class="col-md-6 col-md-offset-1 post4"> <img src="assets/images/imac.png" title="ipad" class="om-mob1" alt="ipad mock"> </div>
-                <div class="col-md-5">
-                    <div class="befolio-icon-text clearfix icon-top text-center vertical default-modern">
-                        <div class="icon"> <i class="fa fa-code"></i> </div>
-                        <div class="befolio-icon-content">
-                            <div class="title-2">
-                                <h4>Development</h4> </div>
-                            <div class="content"> We Carefully plan and structure the visual hierarchy, content, images and overall layout using wireframes and live demos, translating the design to code with our mobile first approach ensuring the website we create is optimised for user experience. </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <hr class="mainhr middlehr">
-                <div class="col-md-5 col-md-offset-1 ">
-                    <div class="befolio-icon-text clearfix icon-top text-center vertical default-modern">
-                        <div class="icon"> <i class="fa fa-line-chart"></i> </div>
-                        <div class="befolio-icon-content">
-                            <div class="title-1">
-                                <h4>Research</h4> </div>
-                            <div class="content"> Here at Onfire Media we are small business specialists and build affordable websites for your online needs. We assess, analyse and implement solutions to define your website to set it apart from everyone else. </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5 col-md-offset-1 post"> <img src="assets/images/macair.png" title="iphone" class="om-mob2" alt="iphone6"> </div>
-            </div>
-            <div class="row">
-                <hr class="mainhr middlehr">
-                <div class="col-md-6 post4"> <img src="assets/images/Ipad-pro.png" title="ipad" class="om-mob1" alt="ipad mock"> </div>
-                <div class="col-md-6">
-                    <div class="befolio-icon-text clearfix icon-top text-center vertical default-modern">
-                        <div class="icon"> <i class="fa fa-code"></i> </div>
-                        <div class="befolio-icon-content">
-                            <div class="title-2">
-                                <h4>Development</h4> </div>
-                            <div class="content"> We Carefully plan and structure the visual hierarchy, content, images and overall layout using wireframes and live demos, translating the design to code with our mobile first approach ensuring the website we create is optimised for user experience. </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="next"> </section>
+    <!------------------------------------------------------------------------------------------------------
+    *** PROJECTS ***
+-------------------------------------------------------------------------------------------------------->
+
+    <!------------------------------------------------------------------------------------------------------
+    *** SCRIPTS ***
+-------------------------------------------------------------------------------------------------------->
     <!-- jQuery -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/typed.min.js"></script>
@@ -152,7 +66,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript" src="assets/js/viewportchecker.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+
 </body>
 
 </html>
